--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,6 @@ body {
 .App {
     width: 100%;
     max-width: 100vw;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -132,7 +131,7 @@ body {
     cursor: pointer;
   }
   
-  .Home, .NewPost, .PostPage, .About, .Missing, .ProductListing {
+  .Home, .About, .Missing, .ProductListing {
     width: 100%;
     flex-grow: 1;
     padding: 1rem;
@@ -140,86 +139,8 @@ body {
     background-color: #fff;
   }
   
-  .post {
+  .Missing p {
     margin-top: 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 1px solid lightgray;
-  }
-  
-  .Home .post a {
-    text-decoration: none;
-  }
-  
-  .Home .post a, 
-  .Home .post a:visited {
-    color: #000;
-  }
-  
-  .post:first-child {
-    margin-top: 0;
-  }
-  
-  .post:last-child {
-    border-bottom: none;
-  }
-  
-  .postDate {
-    font-size: 0.75rem;
-    margin-top: 0.25rem;
-  }
-  
-  .postBody {
-    margin: 1rem 0;
-  }
-  
-  .newPostForm {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .newPostForm label {
-    margin-top: 1rem;
-  }
-  
-  .newPostForm input[type='text'], 
-  .newPostForm textarea {
-    font-family: 'Open Sans', sans-serif;
-    width: 100%;
-    min-height: 48px;
-    font-size: 1rem;
-    padding: 0.25rem;
-    border-radius: 0.25rem;
-    margin-right: 0.25rem;
-    outline: none;
-  }
-  
-  .newPostForm textarea {
-    height: 100px;
-  }
-  
-  .newPostForm button {
-    margin-top: 1rem;
-    height: 48px;
-    min-width: 48px;
-    border-radius: 10px;
-    padding: 0.5rem;
-    font-size: 1rem;
-    cursor: pointer;
-  }
-  
-  .Missing p, .PostPage p, .NewPost p {
-    margin-top: 1rem;
-  }
-  
-  .PostPage button {
-    height: 48px;
-    min-width: 48px;
-    border-radius: 0.25rem;
-    padding: 0.5rem;
-    margin-right: 0.5rem;
-    font-size: 1rem;
-    color: #fff;
-    cursor: pointer;
   }
   
   .deleteButton {
@@ -270,10 +191,6 @@ body {
     .searchForm input[type="text"] {
       margin-left: 0.5rem;
     }
-  
-    .newPostForm textarea {
-      height: 300px;
-    }
   }
   
   @media only screen and (min-width: 992px) {
@@ -286,7 +203,7 @@ body {
 
 section {
     width: 100%;
-    max-width: 420px;
+    max-width: 80vw;
     min-height: 400px;
     display: flex;
     flex-direction: column;
@@ -309,6 +226,7 @@ a, a:visited {
 
 input[type="text"],
 input[type="password"],
+input[type="email"],
 button,
 textarea {
   font-family: 'Nunito', sans-serif;
@@ -380,7 +298,7 @@ button {
 
 /* menu -- start*/
 .Menu {
-  width: 100vw; /* Set the menu container's width to 100% of the viewport width */
+  width: 98vw;
 }
 
 .categories {
@@ -406,14 +324,6 @@ button {
   text-align: center;
 }
 
-.subcategories {
-  /* Styles for subcategories, if needed */
-}
-
-.more {
-  /* Style for the 'More' option */
-}
-
 @media (max-width: 600px) {
   .categories {
       flex-direction: column;
@@ -426,3 +336,67 @@ button {
 }
 
 /* menu -- end */
+
+/* user profile start */
+.user-profile {
+  width: 80vw; /* Set width to 80% of the viewport width */
+  max-width: 800px; /* Optional: Set a maximum width */
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+}
+
+.user-profile h2 {
+  text-align: center;
+  color: #333;
+}
+
+.user-info {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 15px;
+  margin-top: 20px;
+}
+
+.user-info label {
+  font-weight: bold;
+  color: #000; /* Set text color to black */
+  align-self: center; /* Vertically align label text */
+}
+
+.user-info p {
+  background-color: #fff;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  align-self: center; /* Vertically align paragraph text */
+  margin: 0; /* Remove default margin */
+}
+
+.user-info input {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  align-self: center; /* Vertically align input fields */
+}
+
+#saveProfileInfo {
+  grid-column: span 2;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  text-transform: uppercase;
+  align-self: center;
+}
+
+#saveProfileInfo:hover {
+  background-color: #0056b3;
+}
+/* user profile end */
