--- a/frontend/src/css/ProductListing.css
+++ b/frontend/src/css/ProductListing.css
@@ -1,6 +1,15 @@
+html {
+    color: black;
+}
+
 .content-container {
     display: flex;
     justify-content: space-between;
+}
+.content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .filter-groups {
@@ -15,7 +24,7 @@
     justify-content: space-between;
     padding: 10px;
     margin: 10px;
-    height: 20%;
+    max-height: 2%;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
@@ -42,3 +51,30 @@
     font-size: 1em;
     min-width: 5vw;
 }
+
+.main-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 20px;
+    padding: 20px;
+}
+
+.product-card {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    padding: 15px;
+    text-align: center;
+}
+
+.product-card img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+.statusMsg {
+    margin-top: 2rem;
+}
+
+  
