[REFAC,FIX] Moved ScrollToTop Button as a component; controllers, not controller in logout.js

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -238,6 +238,7 @@ textarea {
   font-family: 'Nunito', sans-serif;
   font-size: 22px;
   padding: 0.25rem;
+  border: 2px solid black;
   border-radius: 0.5rem;
 }
 
