[ENH] User can register as user,admin,collaborator

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -233,7 +233,7 @@ a, a:visited {
 input[type="text"],
 input[type="password"],
 input[type="email"],
-button,
+button
 textarea {
   font-family: 'Nunito', sans-serif;
   font-size: 22px;
