--- a/frontend/src/css/StickyMenu.css
+++ b/frontend/src/css/StickyMenu.css
@@ -4,7 +4,7 @@
     width: 95vw;
     display: flex;
     justify-content: space-around;
-    background-color: #fff;
+    background-color: #f4f800;
     z-index: 5;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   }
