--- a/frontend/src/css/ProductFilter.css
+++ b/frontend/src/css/ProductFilter.css
@@ -37,16 +37,19 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     border: 1px solid lightgray;
     border-radius: 5px;
-    margin: 10px;
-    padding: 10px;
+    margin: 5px;
+    padding: 5px;
+}
+
+.filter-group label {
+    cursor: pointer;
 }
 
 .filter-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
-    cursor: pointer;
+    margin-bottom: 2px;
 }
 
 .filter-header label {
@@ -71,3 +74,5 @@
     width: 20px;
     height: 20px;
 }
+
+
